     to the rules for such a type laid out in the Python docs:
     http://docs.python.org/api/supporting-cycle-detection.html

  Zope 2.9.4 (unreleased)

   Bugs fixed

      - Updated Five to bugfix release 1.3.6.

      - Collector #2116: sequence.sort() did not work properly
        locale related comparison methods

      - Collector 2077: fixed problem with ACTUAL_URL and SiteRoot


  Zope 2.9.3 (2006/05/13)

   Bugs fixed

      - Collector #2083: 'make clean' leaves turds.

      - Collector #2082: 'make install' broken.

      - Collector #2081: 'make instance' forced inappropriate dir, credentials.

      - Collector #1447: When editing content on a virtual-hosted zope,
        AcceleratedHTTPCacheManager now purges the correct URL.

      - Collector #2062: Fix manage_historyCopy, which was broken, and write
        tests for it.

      - Collector #2061: Fix problems where windows line endings are passed
        to restricted code compilers.

      - Collector #2072: Applied patch to fix problem with overly restrictive
        __bobo_traverse__ security and tests.
      
      - Added missing Zope 3 packages: zope.app.intid, zope.app.keyreference, 
        zope.app.session, zope.contentprovider, zope.viewlet  

      - Updated Five to bugfix release 1.3.5.

      - OFS.PropertyManager: Provided missing security declarations.

      - Products.SiteErrorLog: SiteErrorLog only copied the unformatted
        traceback to the event.log, missing out on __traceback_supplement__.

  Zope 2.9.2 (2006/03/27)

    Bugs fixed

      - Collector #2051: Applied patch by Yoshinori Okuji to fix some
        XML export/import problems, and added tests for that feature.

      - Missing import of NotFound in webdav.Resource.

      - Collector #2037: fixed broken ACTUAL_URL for '/'

      - Put the default skin interface on the request once it is
        created, both in ZPublisher and ZopeTestCase.

      - Updated Five to bugfix release 1.3.3.  See